more public api docs
