# docs/public-api/data/swagger.json
@@ -5,12 +5,12 @@
         "version": "1.0"
     },
     "host": "www.minds.com",
-    "basePath": "/api/v1",
+    "basePath": "/api",
     "schemes": [
         "https"
     ],
     "paths": {
-        "/analytics": {
+        "/v1/analytics": {
             "put": {
                 "tags": [
                     "analytics"
@@ -30,7 +30,7 @@
                 ]
             }
         },
-        "/boost/{guid}": {
+        "/v1/boost/{guid}": {
             "get": {
                 "tags": [
                     "boost"
@@ -48,7 +48,7 @@
                 "responses": {}
             }
         },
-        "/boost/rate": {
+        "/v1/boost/rate": {
             "get": {
                 "tags": [
                     "boost"
@@ -60,6 +60,224 @@
                         "minds_oauth2": []
                     }
                 ]
+            }
+        },
+        "/v1/entities/entity/{guid}": {
+            "get": {
+                "tags": [
+                    "entities"
+                ],
+                "summary": "Returns a single entity",
+                "parameters": [
+                    {
+                        "name": "guid",
+                        "in": "path",
+                        "description": "Guid",
+                        "required": false,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/v1/entities/featured/{type}/{subtype}": {
+            "get": {
+                "tags": [
+                    "entities"
+                ],
+                "summary": "Returns featured entities",
+                "parameters": [
+                    {
+                        "name": "type",
+                        "in": "path",
+                        "description": "Type (eg. object, user, activity)",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "subtype",
+                        "in": "path",
+                        "description": "Subtype (eg. video, image, blog)",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "Limit the number of returned entities",
+                        "required": false,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "offset",
+                        "in": "query",
+                        "description": "Pagination. Include the entity guid to start the list from",
+                        "required": false,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/v1/entities/suggested/{type}/{subtype}": {
+            "get": {
+                "tags": [
+                    "entities"
+                ],
+                "summary": "Returns suggested entities",
+                "parameters": [
+                    {
+                        "name": "type",
+                        "in": "path",
+                        "description": "Type (eg. object, user, activity)",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "subtype",
+                        "in": "path",
+                        "description": "Subtype (eg. video, image, blog)",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "Limit the number of returned entities",
+                        "required": false,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "skip",
+                        "in": "query",
+                        "description": "How many entities to skip",
+                        "required": false,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/v1/entities/suggested/{action}/{guid}": {
+            "post": {
+                "tags": [
+                    "entities"
+                ],
+                "summary": "Add a relationship to an entity",
+                "parameters": [
+                    {
+                        "name": "action",
+                        "in": "path",
+                        "description": "Action (eg. pass)",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "guid",
+                        "in": "path",
+                        "description": "The entity to create the relationship on",
+                        "required": false,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/v1/entities/trending/{type}/{subtype}": {
+            "get": {
+                "tags": [
+                    "entities"
+                ],
+                "summary": "Returns trending entities",
+                "parameters": [
+                    {
+                        "name": "type",
+                        "in": "path",
+                        "description": "Type (eg. object, user, activity)",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "subtype",
+                        "in": "path",
+                        "description": "Subtype (eg. video, image, blog)",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "Limit the number of returned entities",
+                        "required": false,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "offset",
+                        "in": "query",
+                        "description": "Pagination. Include the entity guid to start the list from",
+                        "required": false,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/v1/entities": {
+            "get": {
+                "tags": [
+                    "entities"
+                ],
+                "summary": "Returns basic entities",
+                "parameters": [
+                    {
+                        "name": "type",
+                        "in": "query",
+                        "description": "Type (eg. object, user, activity)",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "subtype",
+                        "in": "query",
+                        "description": "Subtype (eg. video, image, blog)",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "owner_guid",
+                        "in": "query",
+                        "description": "The owner of the content to return",
+                        "required": false,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "Limit the number of returned entities",
+                        "required": false,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "offset",
+                        "in": "query",
+                        "description": "Pagination. Include the entity guid to start the list from",
+                        "required": false,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/v1/logout": {
+            "post": {
+                "summary": "Logout",
+                "responses": {}
+            }
+        },
+        "/v1/register": {
+            "post": {
+                "summary": "Create a new channel",
+                "responses": {}
             }
         }
     },
@@ -73,7 +291,7 @@
         }
     },
     "externalDocs": {
-        "description": "Find out more about Swagger",
-        "url": "http://swagger.io"
+        "description": "Find out more about Minds",
+        "url": "http://www.minds.org"
     }
 }
